[CARE-3731] Experimental fix for cookie consent bar causing layout shift
See https://linear.app/prezly/issue/CARE-3731/improve-client-side-performance-lighthouse-score-of-the-nextjs-13-bea#comment-78348c2b

--- a/modules/CookieConsent/components/CookieConsentBar.module.scss
+++ b/modules/CookieConsent/components/CookieConsentBar.module.scss
@@ -1,12 +1,33 @@
 .cookieConsentBar {
-    position: relative;
-    z-index: 2;
+    position: fixed;
+    z-index: 2000;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
     padding: $spacing-6 0;
     background: $color-base-white;
-    border-bottom: 1px solid $color-borders;
+    border-top: 1px solid $color-borders;
+
+    animation: appear 1s ease-in-out;
 
     @media print {
         display: none !important;
+    }
+
+    @keyframes appear {
+        from {
+            opacity: 0;
+            translate: 0 100%;
+        }
+        80% {
+            opacity: 0;
+            translate: 0 80%;
+        }
+        to {
+            opacity: 1;
+            translate: 0 0;
+        }
     }
 }
 
